--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@angular/compiler": "~12.1.0",
     "@angular/core": "~12.1.0",
     "@angular/forms": "~12.1.0",
+    "@angular/localize": "~12.1.0",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "~12.1.0",
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
